# CLI-Calculator

./: Cargo.toml  Makefile  README.md  complex.calc  conv.calc  package-lock.json  package.json  sample.calc  tsconfig.json
calc_cli/: Cargo.toml
calc_cli/src/: main.rs
calc_core/: Cargo.toml
calc_core/src/: ast.rs  binder.rs  depgraph.rs  diag.rs  engine.rs  ir.rs  lexer.rs  lib.rs  parser.rs  registry.rs  types.rs  units.rs  vm.rs
calc_core/tests/: engine_e2e_tests.rs  lexer_tests.rs  parser_tests.rs  property_tests.rs  registry_tests.rs  units_tests.rs  vm_ir_tests.rs
calc_gui/: Cargo.toml
calc_gui/src/: main.rs
