[package]
name = "calc_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
indexmap = { version = "2.2", features = ["serde"] }
num-traits = "0.2"
num-complex = { version = "0.4", features = ["serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.6"
approx = "0.5"
