[package]
name = "calc_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
egui = "0.27"
egui_extras = "0.27"
poll-promise = "0.3"
serde = { version = "1.0", features = ["derive"] }
calc_core = { path = "../calc_core" }
